--- a/Web.config
+++ b/Web.config
@@ -10,11 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;Initial Catalog=aspnet-MonashBnBv3-20191012032552;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="MonashBnB_Model" connectionString="metadata=res://*/Models.MonashBnB_Model.csdl|res://*/Models.MonashBnB_Model.ssdl|res://*/Models.MonashBnB_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;initial catalog=aspnet-MonashBnBv3-20191012032552;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MonashBnB" connectionString="metadata=res://*/Models.MonashBnB.csdl|res://*/Models.MonashBnB.ssdl|res://*/Models.MonashBnB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;initial catalog=aspnet-MonashBnBv3-20191012032552;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="MonashBnB_db" connectionString="metadata=res://*/Models.MonashBnB.csdl|res://*/Models.MonashBnB.ssdl|res://*/Models.MonashBnB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;initial catalog=aspnet-MonashBnBv3-20191012032552;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="MonashBnB_Db" connectionString="metadata=res://*/Models.MonashBnB.csdl|res://*/Models.MonashBnB.ssdl|res://*/Models.MonashBnB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;initial catalog=aspnet-MonashBnBv3-20191012032552;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  </connectionStrings>
+   <add name="MonashBnB_db" connectionString="metadata=res://*/Models.MonashBnB.csdl|res://*/Models.MonashBnB.ssdl|res://*/Models.MonashBnB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-MonashBnBv3-20191012032552.mdf;initial catalog=aspnet-MonashBnBv3-20191012032552;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -31,6 +27,7 @@
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="RoleManager" />
     </modules>
   </system.webServer>
   <runtime>
