--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.3.1" targetFramework="net472" />
   <package id="Bootstrap.Datepicker" version="1.8.0.1" targetFramework="net472" />
+  <package id="Chart.js" version="2.8.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Moment.js" version="2.24.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
